// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis Text Label When mounted on a YAxis it renders consistently 1`] = `
<text
  className="AxisTickLabel"
  stroke="black"
  style={
    Object {
      "transform": "translate(-1.25px, NaNpx)",
    }
  }
  x="0%"
  y="0%"
>
  123456
</text>
`;

exports[`Axis Text Label When mounted on an XAxis it renders consistently 1`] = `
<text
  className="AxisTickLabel"
  stroke="black"
  style={
    Object {
      "transform": "translate(0px, 0px)",
    }
  }
  x="0%"
  y="0%"
>
  123456
</text>
`;
